--- a/SchoolProj/SchoolProj/Views/Shared/_Layout.cshtml
+++ b/SchoolProj/SchoolProj/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
 <script>
     $(document).ready(function () {
         $('input[type=datetime]').datepicker({
-            dateFormat: 'dd/mm/yy',
+            dateFormat: 'yy/mm/dd',
             changeMonth: true,
             changeYear: true,
             yearRange:"-10:+10"
