--- a/SchoolProj/SchoolProj/Views/studenttbls/Index.cshtml
+++ b/SchoolProj/SchoolProj/Views/studenttbls/Index.cshtml
@@ -40,7 +40,7 @@
         @*@Html.DisplayFor(modelItem => item.enrolldate)*@
         @if (!string.IsNullOrWhiteSpace(item.enrolldate.ToString()))
         {
-            @Convert.ToDateTime(item.enrolldate).ToString("dd/MM/yyyy").ToString();
+            @Convert.ToDateTime(item.enrolldate).ToString("yyyy/MM/dd").ToString();
         }
     </td>
     <td>
