--- a/SchoolProj/SchoolProj/Views/coursetbls/Index.cshtml
+++ b/SchoolProj/SchoolProj/Views/coursetbls/Index.cshtml
@@ -15,25 +15,31 @@
             @Html.DisplayNameFor(model => model.title)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.level)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.credit)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.title)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.credit)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.title)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.level)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.credit)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+        @Html.ActionLink("Details", "Details", new { id = item.id }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.id })
+    </td>
+</tr>
 }
 
 </table>
