--- a/SchoolProj/SchoolProj/Views/enrolltbls/Index.cshtml
+++ b/SchoolProj/SchoolProj/Views/enrolltbls/Index.cshtml
@@ -9,44 +9,56 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.coursetbl.title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.studenttbl.fname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.studenttbl.lname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.grade)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-<tr>
-
-    <td>
-        @Html.DisplayFor(modelItem => item.coursetbl.title)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.studenttbl.fname)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.studenttbl.lname)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.grade)
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.id })
-    </td>
-</tr>
+@if (!Model.Any())
+{
+    <h2>There Are Any Enrollments To Preview</h2>
 }
+else
+{
 
-</table>
+
+
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.coursetbl.title)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.studenttbl.fname)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.studenttbl.lname)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.grade)
+            </th>
+            <th></th>
+        </tr>
+
+    @foreach (var item in Model) {
+    <tr>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.coursetbl.title)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.studenttbl.fname)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.studenttbl.lname)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.grade)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.id })
+        </td>
+    </tr>
+    }
+
+    </table>
+
+}
