--- a/SchoolProj/SchoolProj/Views/studenttbls/Index.cshtml
+++ b/SchoolProj/SchoolProj/Views/studenttbls/Index.cshtml
@@ -11,52 +11,55 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.fname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.lname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.enrolldate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.imgPath)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-<tr>
-    <td>
-        @Html.DisplayFor(modelItem => item.fname)
-    </td>
-    <td>
-        @Html.DisplayFor(modelItem => item.lname)
-    </td>
-    <td>
-        @*@Html.DisplayFor(modelItem => item.enrolldate)*@
-        @if (!string.IsNullOrWhiteSpace(item.enrolldate.ToString()))
+<table id="myTable" class="table">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.fname)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.lname)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.enrolldate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.imgPath)
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
         {
-            @Convert.ToDateTime(item.enrolldate).ToString("yyyy/MM/dd").ToString();
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.fname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.lname)
+                </td>
+                <td>
+                    @*@Html.DisplayFor(modelItem => item.enrolldate)*@
+                    @if (!string.IsNullOrWhiteSpace(item.enrolldate.ToString()))
+                    {
+                        @Convert.ToDateTime(item.enrolldate).ToString("yyyy/MM/dd").ToString();
+                    }
+                </td>
+                <td>
+                    @*@Html.DisplayFor(modelItem => item.imgPath)*@
+                    @if (!string.IsNullOrWhiteSpace(item.imgPath))
+                    {
+                        <img width="50" height="50"
+                             src="~/Content/Images/Students/@Url.Content(item.imgPath)" alt="Alternate Text" />
+                    }
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                </td>
+            </tr>
         }
-    </td>
-    <td>
-        @*@Html.DisplayFor(modelItem => item.imgPath)*@
-        @if (! string.IsNullOrWhiteSpace(item.imgPath))
-        {
-            <img width="50" height="50"
-                 src="~/Content/Images/Students/@Url.Content(item.imgPath)" alt="Alternate Text" />
-        }
-    </td>
-    <td>
-        @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
-        @Html.ActionLink("Details", "Details", new { id = item.id }) |
-        @Html.ActionLink("Delete", "Delete", new { id = item.id })
-    </td>
-</tr>
-}
-
+    </tbody>
 </table>
