--- a/SchoolProj/SchoolProj/Views/Shared/_Layout.cshtml
+++ b/SchoolProj/SchoolProj/Views/Shared/_Layout.cshtml
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿@using SchoolProj.Models
+@{ 
+    var cSatats = (List<myCourseStats>) ViewBag.courseStats;
+}
+
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -13,15 +19,26 @@
 
 </head>
 <body>
-
-    @Html.Partial("_navBar");
-
     <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+        @Html.Partial("_navBar");
+        <div class="row">
+            <div class="col-3">
+                @if (cSatats != null)
+                {
+                    foreach (var item in cSatats)
+                    {
+                        @Html.Partial("_courseStatSummery", item);
+                    }
+                }
+            </div>
+            <div class="col-9">
+                @RenderBody()
+                <hr />
+                <footer>
+                    <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+                </footer>
+            </div>
+        </div>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
@@ -47,6 +64,43 @@
         });
         //to design data table
         $('#myTable').DataTable();
-/*        $('table').DataTable();*/
+        // to Delete By chickboxes
+        $("#parent").click(function () {
+            $('.child').prop("checked", this.checked);
+        });
+        $('.child').click(function () {
+            if ($('.child:checked').length == $('.child').length) {
+                $("#parent").prop("checked", true);
+            } else {
+                $("#parent").prop("checked", false);
+            }
+        });
     });
+    function DelMe(obj) {
+        swal({
+            title: 'Are You Sure ?',
+            text: "You Won't be Able to revert this!",
+            icon: 'warning'
+        }).then((result) => {
+            if (result) {
+                var elem = $(obj);
+                var id = elem.data("model-id");
+                var url = "/coursetbls/DeleteAjax/" + id;
+                $.ajax({
+                    url: url,
+                    type: "POST",
+                    success: function () {
+                        elem.closest("tr").remove();
+                        toastr.success('Deleted !');
+                    },
+                    error: function () {
+                        toastr.error('Failed !');
+                    }
+                });
+
+            }
+        })
+    };
+
+
 </script>
