--- a/SchoolProj/SchoolProj/Views/Shared/_navBar.cshtml
+++ b/SchoolProj/SchoolProj/Views/Shared/_navBar.cshtml
@@ -13,14 +13,15 @@
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Courses", "Index", "coursetbls", new { area = "" }, new { @class = "nav-link" })</li>
+                <li class="nav-item">@Html.ActionLink("DeleteMultiCourses", "IndexWithDeletedMultible", "coursetbls", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Students", "Index", "studenttbls", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Enrollments", "Index", "enrolltbls", new { area = "" }, new { @class = "nav-link" })</li>
 
-                @using (Html.BeginForm("Index", "coursetbls" ,new { returnUrl = Request.QueryString["ReturnUrl"] }, FormMethod.Post, new { @class = "d-flex" }))
+                @using (Html.BeginForm("Index", "coursetbls", new { returnUrl = Request.QueryString["ReturnUrl"] }, FormMethod.Post, new { @class = "d-flex" }))
                 {
                     <form class="d-flex">
-                    <input class="form-control me-2" name="searchInCourses" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                        <input class="form-control me-2" name="searchInCourses" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                 }
 
