--- a/SchoolProj/SchoolProj/Views/Shared/_navBar.cshtml
+++ b/SchoolProj/SchoolProj/Views/Shared/_navBar.cshtml
@@ -4,7 +4,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+        
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
@@ -16,38 +16,79 @@
                 <li class="nav-item">@Html.ActionLink("DeleteMultiCourses", "IndexWithDeletedMultible", "coursetbls", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Students", "Index", "studenttbls", new { area = "" }, new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Enrollments", "Index", "enrolltbls", new { area = "" }, new { @class = "nav-link" })</li>
-
+                <li class="has-submenu">
+                    <a class="dropdown-item dropdown-toggle" href="#"> Dropdown item 5 </a>
+                    <div class="megasubmenu dropdown-menu">
+                        Excepteur sint occaecat cupidatat non
+                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat.
+                    </div>
+                </li>
                 @using (Html.BeginForm("Index", "coursetbls", new { returnUrl = Request.QueryString["ReturnUrl"] }, FormMethod.Post, new { @class = "d-flex" }))
                 {
                     <form class="d-flex">
-                        <input class="form-control me-2" name="searchInCourses" type="search" placeholder="Search" aria-label="Search">
+                        <input class="form-control me-2" name="searchInCourses" id="serchInput" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                 }
 
             </ul>
+
+
             @Html.Partial("_LoginPartial", new { @class = "nav-link" })
         </div>
     </div>
 </nav>
-@*<div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("student", "Index", "studenttbls")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
+
+<br />
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Brand</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="main_nav">
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"> Menu item </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#"> Dropdown item 1 </a></li>
+                        <li><a class="dropdown-item" href="#"> Dropdown item 2 </a></li>
+                        <li><a class="dropdown-item" href="#"> Dropdown item 3 </a></li>
+                        <li class="has-submenu">
+                            <a class="dropdown-item dropdown-toggle" href="#"> Dropdown item 4 </a>
+                            <div class="megasubmenu dropdown-menu">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                                cillum dolore eu fugiat nulla pariatur.
+                            </div>
+                        </li>
+                        <li class="has-submenu">
+                            <a class="dropdown-item dropdown-toggle" href="#"> Dropdown item 5 </a>
+                            <div class="megasubmenu dropdown-menu">
+                                Excepteur sint occaecat cupidatat non
+                                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                                consequat.
+                            </div>
+                        </li>
+                        <li><a class="dropdown-item" href="#"> Dropdown item 6 </a></li>
+                    </ul>
+                </li>
+                <li class="nav-item"> <a class="nav-link" href="#"> Menu item </a> </li>
+                <li class="nav-item"><a class="nav-link" href="#"> Menu item </a></li>
+                <li class="nav-item"><a class="nav-link" href="#"> Menu item </a></li>
+            </ul>
         </div>
-    </div>*@
+        <!-- navbar-collapse.// -->
+    </div>
+    <!-- container-fluid.// -->
+</nav>
