--- a/SchoolProj/SchoolProj/Views/coursetbls/studentsInCourse.cshtml
+++ b/SchoolProj/SchoolProj/Views/coursetbls/studentsInCourse.cshtml
@@ -12,10 +12,15 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
                 <div class="card h-100">
-                    <img src="~/Content/Images/Students/@Url.Content(item.studenttbl.imgPath)" class="card-img-top" alt="...">
+                    @if (item.studenttbl.imgPath != null) 
+                    {
+                        <img src="~/Content/Images/Students/@Url.Content(item.studenttbl.imgPath)" class="card-img-top" alt="...">
+                    }
                     <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        <a href="/studenttbls/Details/@Url.Content(item.studenttbl.id.ToString())"> 
+                            <h5 class="card-title">@item.studenttbl.FullName</h5>
+                        </a>
+                        <p class="card-text">...</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">Last updated 3 mins ago</small>
